# Raspberrypi_Yocto_Sensor_Node_ML_Kernel_User_Space

./: README.md
KernelSpace/BME280_I2C_Drivers/: device.c
KernelSpace/BME280_I2C_Drivers/inc/: sensor.h
KernelSpace/BME280_I2C_Drivers/src/: device.c  sensor.c
KernelSpace/Drivers/BME280/: Makefile
UserSpace/: README.md
UserSpace/Application/: .gitignore  CMakeLists.txt  EmbeddedApp.service  Makefile  README.md  application  build.sh  linkerset.ld
UserSpace/Application/core/: AES256.hpp  CMakeLists.txt  Thread.hpp  Timer.hpp
UserSpace/Application/core/inc/: AutoInit.hpp  CliCommand.hpp  ErrorCodes.hpp  Message.hpp  NoCopy.hpp  Queue.hpp  QueueHandle.hpp  QueueInfo.hpp  RegisterAutoInit.hpp  RegisterCliCommand.hpp  RegisterQueueHandle.hpp  Service.hpp  Thread.hpp  Timer.hpp
UserSpace/Application/core/interface/: ServiceIf.hpp
UserSpace/Application/core/src/: Service.cpp
UserSpace/Application/main/: CMakeLists.txt
UserSpace/Application/main/inc/: AutoInit.hpp  main.hpp
UserSpace/Application/main/src/: main.cpp
UserSpace/Application/protobuf/: cli.proto
UserSpace/Application/services/: CMakeLists.txt
UserSpace/Application/services/cli/: CMakeLists.txt
UserSpace/Application/services/cli/inc/: Cli.hpp  CliCommand.hpp  Help.hpp  Restart.hpp  Shutdown.hpp
UserSpace/Application/services/cli/interface/: CliErrorCodesIf.hpp
UserSpace/Application/services/cli/src/: Cli.cpp  Help.cpp  Restart.cpp  Shutdown.cpp
UserSpace/Application/services/fileio/: CMakeLists.txt
UserSpace/Application/services/fileio/inc/: FileIO.hpp
UserSpace/Application/services/fileio/interface/: FileIOIf.hpp
UserSpace/Application/services/fileio/src/: FileIO.cpp
UserSpace/Application/services/intelligence/: CMakeLists.txt
UserSpace/Application/services/intelligence/inc/: Regression.hpp
UserSpace/Application/services/intelligence/src/: Regression.cpp
UserSpace/Application/services/logging/: CMakeLists.txt
UserSpace/Application/services/logging/inc/: Logging.hpp
UserSpace/Application/services/logging/interface/: LoggingIf.hpp
UserSpace/Application/services/logging/src/: Logging.cpp
UserSpace/Application/services/telnet/: CMakeLists.txt
UserSpace/Application/services/telnet/Interface/: TelnetIf.hpp
UserSpace/Application/services/telnet/inc/: Telnet.hpp  TelnetServer.hpp
UserSpace/Application/services/telnet/interface/: TelnetIf.hpp  TelnetServerIf.hpp
UserSpace/Application/services/telnet/src/: Telnet.cpp  TelnetServer.cpp
